--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -21,3 +21,96 @@ option{padding-right:6px}
 hr{display:none}
 legend{*width:0}
 table{border-collapse:collapse;border-spacing:0}
+
+
+.memo {
+	padding: 5px;
+	position: absolute;
+}
+
+.memo {
+	font-size: 13px;
+}
+
+.memo .itemContent{
+	clear: both;
+}
+
+.memo .itemContent span{
+	color: red;
+	background-color: yellow;
+}
+
+.memo span .styleBtn {
+	background-color: orange;
+}
+.memo span input {
+	padding: 0 1px;
+	float: right;
+	margin-left: 2px;
+}
+
+.clearable{
+  background: #fff url(images/icoX.gif) no-repeat right -10px center;
+  border: 1px solid #999;
+  padding: 3px 18px 3px 4px;     /* Use the same right padding (18) in jQ! */
+  border-radius: 3px;
+  transition: background 0.4s;
+}
+.clearable.x  { background-position: right 5px center; } /* (jQ) Show icon */
+.clearable.onX{ cursor: pointer; }              /* (jQ) hover cursor style */
+
+
+.tool input{
+	padding: 0;
+}
+.palette{
+	width: 60px;
+	position: absolute;
+	display: none;
+	z-index: 99999999999;
+}
+.palette li{
+	float: left;
+}
+.palette div{
+	padding: 4px;
+	width: 10px;
+	height: 10px;
+	cursor: pointer;
+}
+.palette .text_area div	{
+	background-color: #ee98de;
+}
+
+/* 검색 안된 메모 스타일 */
+.not_search{
+	opacity: .3;
+}
+
+/* 메모장 적용 스타일 */
+._ct_bgstyle_1{
+	border: 1px solid #a9abb0;
+	background-color: teal;
+}
+._ct_bgstyle_2{
+	border: 1px solid #a9abb0;
+	background-color: fuchsia;
+}
+._ct_bgstyle_3{
+	border: 1px solid #a9abb0;
+	background-color: activeborder;
+}
+
+._ct_fontstyle_1{
+	border: 1px solid #a9abb0;
+	color: purple;
+}
+._ct_fontstyle_2{
+	border: 1px solid #a9abb0;
+	color: black;
+}
+._ct_fontstyle_3{
+	border: 1px solid #a9abb0;
+	color: blue;
+}
